# pyper

./: .gitignore  README.md  pyproject.toml  requirements.txt
instruct/: generate_instructions.py  llm_api.py
instruct/source/: knowledge.txt  prompt.py
pyper/: llm_api.py  pipeline.py  run.py
pyper/fission/: generate.py  main.py  model.py
pyper/fission/prompt/: prompt.py
pyper/source/: example_knowledge.txt
