[tool.poetry]
name = "pyper"
version = "0.1.0"
description = "framework for synthetic data generation"
authors = ["Daniel Lee <dannylee1020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.1,<4.0"
openai = "^1.59.6"
tqdm = "^4.67.1"
fire = "^0.7.0"
numpy = "^2.2.1"
pandas = "^2.2.3"
pydantic = "^2.10.5"
chromadb = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
